--- a/7работа с html формами/index.html
+++ b/7работа с html формами/index.html
@@ -11,8 +11,13 @@
         <div class="container">
             <nav class="header__nav">
                 <input type="text" id="name" name="name" placeholder="ФИО">
-                <input type="select">
-                <input type="radio">
+                <div class="hint hide">напишите @ что бы отправить почту</div>
+                <input type="select" placeholder="1">
+                <input type="select" placeholder="2">
+                <input type="select" placeholder="3">
+                <input type="radio" data="1">
+                <input type="radio" data="2">
+                <input type="radio" data="3">
                 <input type="checkbox">
                 <input type="textarea">
             </nav>
